Cherry-pick 276035@main (d83537abc7e7). https://bugs.webkit.org/show_bug.cgi?id=270697

REGRESSION (iOS 17.4, macOS 14.4, 270890@main): Animating element with display: none still remain visible
    https://bugs.webkit.org/show_bug.cgi?id=270697
    rdar://124289418

    Reviewed by Antoine Quint and Darin Adler.

    The page sets the root of the overlay containing tree to display:none and immediately (before style recall) reinserts
    it into another position in the document, causing render tree teardown. When we recompute the style (applying display:none)
    we don't consider it a style change since there was no existing style due to the earlier teardown.
    In this case we fail to clear lastStyleChangeEventStyle which has been set by an animation on the element.

    Another animation triggered style recalc comes along, takes the optimized AnimationOnly code path and picks up
    the lastStyleChangeEventStyle (which doesn't have display:none) bringing the element back alive.

    * LayoutTests/fast/animation/animation-with-DOM-mutation-and-display-none-expected.html: Added.
    * LayoutTests/fast/animation/animation-with-DOM-mutation-and-display-none.html: Added.
    * Source/WebCore/style/StyleTreeResolver.cpp:
    (WebCore::Style::TreeResolver::resolveElement):

    Fix by clearing lastStyleChangeEventStyle also when we have a style change to display:none without existing renderer.

    Canonical link: https://commits.webkit.org/276035@main

Canonical link: https://commits.webkit.org/274313.379@webkitglib/2.44